--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <title> Demo website </title>
 </head>
 <body style = "background-image:url('images/github3.jpg'); background-size: 100%">
-<h2 ALIGN=CENTER>Hello world! From Nitesh</h2>
+<h2 ALIGN=CENTER>Hello world!</h2>
 </body>
 </html>
